---
source: crates/derive-python/src/codegen/mod.rs
expression: output
---
"""Entry point of a derivation, generated by Estuary. It runs the `Derivation`
which the derivation's directory exports."""
import asyncio
import collections.abc
import importlib.util
import json
import pathlib
import pydantic
import sys
import types
import typing

from patterns.sums import Document, IDerivation, Request, Response


def load_task() -> typing.Any:
    """Load the task's directory, its `__init__.py`, as package `__flow_task__`."""
    directory = pathlib.Path(__file__).resolve().parent.parent / "sums"
    spec = importlib.util.spec_from_file_location(
        "__flow_task__",
        directory / "__init__.py",
        submodule_search_locations=[str(directory)],
    )
    assert spec is not None and spec.loader is not None
    module = importlib.util.module_from_spec(spec)
    sys.modules[spec.name] = module
    spec.loader.exec_module(module)
    return module


task: typing.Any = load_task()


Derivation: type[IDerivation[typing.Any, typing.Any]] = task.Derivation


def emit(field: str, message: pydantic.BaseModel, flush: bool) -> None:
    """Write one Response, as an envelope over its single set field.

    The envelope is composed here rather than dumped from `Response`, which
    models each variant as an optional field and would emit the unset siblings
    as explicit nulls: bytes on the per-document hot path. `exclude_none` would
    drop them, but it recurses, and would also strip meaningful nulls from
    derived documents and from connector state -- where a null is an RFC 7396
    merge-patch deletion.
    """
    print(f'{{"{field}":{message.model_dump_json(by_alias=True)}}}', flush=flush)


async def stdin_lines() -> typing.AsyncGenerator[bytes, None]:
    loop = asyncio.get_event_loop()
    reader = asyncio.StreamReader(limit=1 << 27)  # 128 MiB.
    protocol = asyncio.StreamReaderProtocol(reader)
    await loop.connect_read_pipe(lambda: protocol, sys.stdin)

    while line := await reader.readline():
        yield line


def type_arguments() -> tuple[typing.Any, typing.Any]:
    """Resolve the types `C` (of `config`) and `R` (of each transform's
    resource configuration) which Derivation declares by subclassing
    IDerivation, falling back to IDerivation's defaults for those it omits.

    The derivation's configurations are always parsed into the types it
    declares, which may differ from the generated types."""
    defaults: list[typing.Any] = [param.__default__ for param in IDerivation.__type_params__]

    for base in types.get_original_bases(Derivation):
        if base is IDerivation:
            return defaults[0], defaults[1]
        if typing.get_origin(base) is IDerivation:
            args: list[typing.Any] = [*typing.get_args(base), *defaults[len(typing.get_args(base)):]]
            return args[0], args[1]

    raise TypeError(
        "Derivation must directly subclass IDerivation, as `class Derivation(IDerivation)` "
        "or `class Derivation(IDerivation[MyConfig, MyResourceConfig])`"
    )


def parse_config(config_type: typing.Any, config: typing.Any) -> typing.Any:
    """Parse the derivation's `config` into its declared type. Configurations
    carry merged secrets, so errors are reported without their input values."""
    try:
        return pydantic.TypeAdapter(config_type).validate_python(config)
    except pydantic.ValidationError as err:
        details = err.errors(include_input=False, include_url=False)
        lines = [f"  /{'/'.join(str(loc) for loc in detail['loc'])}: {detail['msg']}" for detail in details]
        print("derivation `config` is invalid:\n" + "\n".join(lines), file=sys.stderr)
        sys.exit(1)


def validate(config_type: typing.Any, resource_type: typing.Any) -> None:
    """Validate the derivation, reading its configuration and Request.Validate
    from stdin, and printing its Response.Validated."""
    request = json.loads(sys.stdin.buffer.read())

    config = parse_config(config_type, request["config"])
    validate = Request.Validate[resource_type].model_validate(request["validate"])
    validated = Derivation.validate(validate, config)

    print(validated.model_dump_json(by_alias=True))


async def main(config_type: typing.Any, resource_type: typing.Any) -> None:
    """Main event loop for Python derivation runtime."""

    lines = stdin_lines()
    open: dict[str, typing.Any] = json.loads(await lines.__anext__())["open"]
    derivation_spec: dict[str, typing.Any] = open["collection"]["derivation"]

    # The connector has reduced `config` to the derivation's own configuration.
    config = parse_config(config_type, derivation_spec.get("config", {}))

    # The resource configuration of a transform is its `lambda`, if any.
    resource_adapter = pydantic.TypeAdapter(resource_type)
    resources = [
        resource_adapter.validate_python(transform_spec.get("lambdaConfig") or {})
        for transform_spec in derivation_spec.get("transforms", [])
    ]

    # Instantiate user's Derivation class
    derivation = Derivation(
        Request.Open[resource_type].model_construct(state=open.get("state", {}), resources=resources),
        config,
    )

    # Dispatch each read to the transform method of its type. A match (unlike
    # indexing a list of methods) type-checks, as each method takes its own type.
    def transform(read: Request.ReadFromInts | Request.ReadProcessStrings) -> collections.abc.AsyncIterator[Document]:
        match read:
            case Request.ReadFromInts():
                return derivation.from_ints(read)
            case Request.ReadProcessStrings():
                return derivation.process_strings(read)

    emit("opened", Response.Opened(), flush=True)

    # Main protocol loop
    async for line in lines:
        request = Request.model_validate_json(line)

        if request.read:
            async for doc in transform(request.read):
                emit("published", Response.Published(doc=doc), flush=False)

        elif request.flush:
            flushed = Response.Flushed()
            async for doc in derivation.flush(request.flush.state_patches, flushed):
                emit("published", Response.Published(doc=doc), flush=False)

            emit("flushed", flushed, flush=True)

        elif request.reset:
            await derivation.reset()

        else:
            raise RuntimeError(f"Unknown message: {request}")


if __name__ == "__main__":
    try:
        config_type, resource_type = type_arguments()

        if sys.argv[1:] == ["validate"]:
            validate(config_type, resource_type)
        else:
            asyncio.run(main(config_type, resource_type))
    except Exception as e:
        print(f"Fatal error: {e}", file=sys.stderr)
        import traceback

        traceback.print_exc()
        sys.exit(1)
